# Contextual_RAG_Chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env_sample  pyproject.toml
agentic_rag/: api.py  crew.py  crewai_main.py  ollama_reranker.py  rag.py  rag_rerank.py
agentic_rag/config/: agents.yaml
agentic_rag/eval/: phoenix_evaluation.py  ragas_evaluation.py
agentic_rag/tools/: custom_tools.py  custom_tools_rerank.py
artifacts/: dataset_dict.csv  file_hash_cache.json  hallucination_eval_df.csv  metadata_context_chunk.json  qa_eval_df.csv  queries_df.csv  rag_df.csv  ragas_evaluation_results.csv  relevance_eval_df.csv  retrieved_documents_df.csv
artifacts/markdown_artifacts/: Abu Dhabi Procurement Standards.md  HR Bylaws.md  Inforamation Security.md  Procurement Manual (Ariba Aligned).md  Procurement Manual (Business Process).md
config/: config.yaml  config_manager.py
docker/: init-db.sql
llm/: llm.py
rag_pipeline/: chunking.py  contextual_retrieval.py  data_extraction.py  embedding_storage.py  file_hash_manager.py  main.py
